# projet_annuel

./: .gitignore  Cargo.toml  README.md  app_user.rs  club.rs  zone.rs
entity/src/: app_user.rs  club.rs  mod.rs  prelude.rs  session.rs  slot.rs  zone.rs
front/: app.vue  nuxt.config.ts  package-lock.json  package.json  tailwind.config.js
front/components/: CreateReservation.vue  CreateZone.vue  InfoModal.vue  Modal.vue  ZoneList.vue  reservation.vue
front/composables/: apiFetch.ts
front/layouts/: default.vue
front/pages/: Calendar.vue  admin.vue  calendar.vue  home.vue  index.vue  login.vue  password_reset.vue  profil.vue  register.vue  reservations.vue  tennisnews.vue
front/stores/: auth.js  club.js  level.js  notify.ts
migration/src/: lib.rs  m20220101_000001_create_table.rs  m20220101_000002_alter_table.rs  m20220101_000003_alter_table.rs  m20240408_075723_create_club.rs  m20240408_075736_create_zone.rs  m20240408_094016_create_slot.rs  m20240408_095814_alter_user.rs  m20240409_090416_create_session.rs  m20240418_125342_alter_user.rs  m20240427_125342_alter_user_admin.rs  m20240524_175621_alter_slot.rs  m20240524_190358_alter_slot.rs
resources/: email_reset_password.html
src/: main.rs
src/api/: api_error.rs  mod.rs  server.rs  state.rs
src/api/auth/: auth_handler.rs  auth_router.rs  mod.rs
src/api/club/: club_handler.rs  club_router.rs  mod.rs
src/api/reset_password/: mod.rs  password_reset_handler.rs  password_reset_router.rs
src/api/slot/: mod.rs  slot_handler.rs  slot_router.rs
src/api/users/: mod.rs  users_handler.rs  users_router.rs
src/api/zone/: mod.rs  zone_handler.rs  zone_router.rs
src/dto/: app_user.rs  club.rs  mod.rs  password_reset.rs  session.rs  slot.rs  zone.rs
src/middleware/: auth_middleware.rs
src/services/: club_services.rs  mod.rs  password_reset_services.rs  session_services.rs  slot_services.rs  users_services.rs  zone_services.rs
src/utils/: date_utils.rs  mod.rs  periode_utils.rs  time_format.rs  time_utils.rs
