[package]
name = "projet_annuel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [".", "entity", "migration"]

[dependencies]
anyhow = "1.0.81"
axum = "0.7.4"
dotenv = "0.15.0"
entity = { path = "entity" }
migration = { path = "migration" }
sea-orm = "0.12"
tokio = { version = "1.0", features = ["full"] }
