[package]
name = "projet_annuel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [".", "entity", "migration"]

[dependencies]
utoipa = { version = "4.2.0", features = ["axum_extras", "preserve_order"] }
anyhow = "1.0.81"
axum = "0.7.4"
dotenv = "0.15.0"
migration = { path = "migration" }
sea-orm = "0.12"
tokio = { version = "1.0", features = ["full"] }
utoipauto = "0.1.10"
utoipa-swagger-ui = { version = "6.0.0", features = ["axum"] }
serde = { version = "1.0.197", features = ["derive"] }
entity = { path = "entity" }
bcrypt = "0.15"
chrono = "0.4.37"

[dependencies.uuid]
version = "1.8.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
