[package]
name = "projet_annuel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [".", "entity", "migration"]

[dependencies]
utoipa = { version = "4.2.0", features = [
    "axum_extras",
    "preserve_order",
    "chrono",
] }
anyhow = "1.0.81"
axum = "0.7.4"
dotenv = "0.15.0"
migration = { path = "migration" }
sea-orm = "0.12"
tokio = { version = "1.0", features = ["full"] }
utoipauto = "0.1.10"
utoipa-swagger-ui = { version = "6.0.0", features = ["axum"] }
serde = { version = "1.0.197", features = ["derive"] }
entity = { path = "entity" }
bcrypt = "0.15"
chrono = { version = "0.4.37", features = ["serde"] }
uuid = { version = "1.8.0", features = ["v4", "fast-rng", "macro-diagnostics"] }
axum-extra = { version = "0.9.3", features = ["typed-header"] }
tower-http = { version = "0.5.2", features = ["cors", "trace"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
tracing-log = "0.2.0"
serde_json = "1.0.116"
